# agentic_pr_validation

./: .gitignore  Makefile  chatbot.py  multi_tech_compliance_report.md  pyproject.toml  requirements.txt  test.py  test2.py  test_databricks_sql.py  test_simple_sql.py  test_simplified_sql_databricks_adf_only_last_version.py  test_simplified_sql_databricks_only.py  validation_report_TEST-20250718-231530.json  validation_report_TEST-20250720-214319.json
.azure-pipelines/: pr-validation-pipeline.yml
api/: __init__.py  main.py  models.py
api/middleware/: __init__.py  auth.py  logging.py
api/routes/: __init__.py  health.py  validation.py
docker/: Dockerfile  docker-compose.yml
scripts/: deploy.sh  setup.sh
src/: __init__.py
src/agents/: __init__.py  adf_specialist.py  base_agent.py  databricks_specialist.py  file_analyst.py  report_generator.py  sql_specialist.py
src/config/: __init__.py  checkpoints.yaml  openai_config.py  settings.py
src/crew/: __init__.py  pr_validation_crew.py  tasks.py
src/models/: __init__.py  checkpoint.py  technology.py  validation_report.py
src/tools/: __init__.py  adf_tools.py  databricks_tools.py  file_tools.py  report_tools.py  sql_tools.py
src/utils/: __init__.py  azure_devops.py  git_helper.py  logger.py
src/validators/: __init__.py  base_validator.py
